// Vitest Snapshot v1

exports[`Divider > Divider alignVue demo works fine 1`] = `
<div
  data-v-7ac68ae7=""
>
  <h3
    data-v-7ac68ae7=""
  >
    文字+直线
  </h3>
  <div
    class="t-divider t-divider--hairline t-divider--content-center demo-5"
    data-v-7ac68ae7=""
    role="separator"
  >
    
     文字信息 
    
  </div>
  <h3
    data-v-7ac68ae7=""
  >
    文字+虚线
  </h3>
  <div
    class="t-divider t-divider--hairline t-divider--content-center t-divider--dashed demo-5"
    data-v-7ac68ae7=""
    role="separator"
  >
    
     文字信息 
    
  </div>
</div>
`;

exports[`Divider > Divider baseVue demo works fine 1`] = `
<div
  data-v-589c0842=""
>
  <h3
    data-v-589c0842=""
  >
    直线拉通
  </h3>
  <div
    class="t-divider t-divider--hairline"
    data-v-589c0842=""
    role="separator"
  >
    <!---->
  </div>
  <h3
    data-v-589c0842=""
  >
    虚线拉通
  </h3>
  <div
    class="t-divider t-divider--hairline t-divider--dashed"
    data-v-589c0842=""
    role="separator"
  >
    <!---->
  </div>
  <h3
    data-v-589c0842=""
  >
    左右间距
  </h3>
  <div
    class="t-divider t-divider--hairline demo-2"
    data-v-589c0842=""
    role="separator"
  >
    <!---->
  </div>
  <h3
    data-v-589c0842=""
  >
    右侧拉通
  </h3>
  <div
    class="t-divider t-divider--hairline demo-3"
    data-v-589c0842=""
    role="separator"
  >
    <!---->
  </div>
  <h3
    data-v-589c0842=""
  >
    自定义左侧间距
  </h3>
  <div
    class="t-divider t-divider--hairline demo-4"
    data-v-589c0842=""
    role="separator"
  >
    <!---->
  </div>
</div>
`;

exports[`Divider > Divider mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Divider 分割符
  </h1>
  <p
    class="summary"
  >
    用于分割、组织、细化有一定逻辑的组织元素内容和页面结构。
  </p>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        分割符主要是由直线和文字组成
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="background: rgb(255, 255, 255);"
      >
        <div
          data-v-589c0842=""
        >
          <h3
            data-v-589c0842=""
          >
            直线拉通
          </h3>
          <div
            class="t-divider t-divider--hairline"
            data-v-589c0842=""
            role="separator"
          >
            <!---->
          </div>
          <h3
            data-v-589c0842=""
          >
            虚线拉通
          </h3>
          <div
            class="t-divider t-divider--hairline t-divider--dashed"
            data-v-589c0842=""
            role="separator"
          >
            <!---->
          </div>
          <h3
            data-v-589c0842=""
          >
            左右间距
          </h3>
          <div
            class="t-divider t-divider--hairline demo-2"
            data-v-589c0842=""
            role="separator"
          >
            <!---->
          </div>
          <h3
            data-v-589c0842=""
          >
            右侧拉通
          </h3>
          <div
            class="t-divider t-divider--hairline demo-3"
            data-v-589c0842=""
            role="separator"
          >
            <!---->
          </div>
          <h3
            data-v-589c0842=""
          >
            自定义左侧间距
          </h3>
          <div
            class="t-divider t-divider--hairline demo-4"
            data-v-589c0842=""
            role="separator"
          >
            <!---->
          </div>
        </div>
        <div
          data-v-7ac68ae7=""
        >
          <h3
            data-v-7ac68ae7=""
          >
            文字+直线
          </h3>
          <div
            class="t-divider t-divider--hairline t-divider--content-center demo-5"
            data-v-7ac68ae7=""
            role="separator"
          >
            
             文字信息 
            
          </div>
          <h3
            data-v-7ac68ae7=""
          >
            文字+虚线
          </h3>
          <div
            class="t-divider t-divider--hairline t-divider--content-center t-divider--dashed demo-5"
            data-v-7ac68ae7=""
            role="separator"
          >
            
             文字信息 
            
          </div>
        </div>
        <div
          class="divider-container"
          data-v-0851d1f8=""
        >
          <h3
            data-v-0851d1f8=""
          >
            纯文字
          </h3>
          <div
            class="t-divider t-divider--hairline t-divider--content-center"
            data-v-0851d1f8=""
            role="separator"
            style="border-color: transparent;"
          >
            
             没有更多了~ 
            
          </div>
          <h3
            data-v-0851d1f8=""
          >
            垂直分割
          </h3>
          <div
            class="demo-6"
            data-v-0851d1f8=""
          >
            <span
              data-v-0851d1f8=""
            >
              文字信息
            </span>
            <div
              class="t-divider t-divider--hairline t-divider-vertical"
              data-v-0851d1f8=""
              role="separator"
            >
              <!---->
            </div>
            <span
              data-v-0851d1f8=""
            >
              文字信息
            </span>
            <div
              class="t-divider t-divider--hairline t-divider-vertical"
              data-v-0851d1f8=""
              role="separator"
            >
              <!---->
            </div>
            <span
              data-v-0851d1f8=""
            >
              文字信息
            </span>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Divider > Divider verticalVue demo works fine 1`] = `
<div
  class="divider-container"
  data-v-0851d1f8=""
>
  <h3
    data-v-0851d1f8=""
  >
    纯文字
  </h3>
  <div
    class="t-divider t-divider--hairline t-divider--content-center"
    data-v-0851d1f8=""
    role="separator"
    style="border-color: transparent;"
  >
    
     没有更多了~ 
    
  </div>
  <h3
    data-v-0851d1f8=""
  >
    垂直分割
  </h3>
  <div
    class="demo-6"
    data-v-0851d1f8=""
  >
    <span
      data-v-0851d1f8=""
    >
      文字信息
    </span>
    <div
      class="t-divider t-divider--hairline t-divider-vertical"
      data-v-0851d1f8=""
      role="separator"
    >
      <!---->
    </div>
    <span
      data-v-0851d1f8=""
    >
      文字信息
    </span>
    <div
      class="t-divider t-divider--hairline t-divider-vertical"
      data-v-0851d1f8=""
      role="separator"
    >
      <!---->
    </div>
    <span
      data-v-0851d1f8=""
    >
      文字信息
    </span>
  </div>
</div>
`;
